--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -37,6 +37,28 @@
     line-height: 13px;
     margin: 0;
   }
+
+  .profile__input {
+    color: white;
+    background-color: unset;
+    border: none;
+    font-weight: 500;
+    font-size: 11px;
+    line-height: 13px;
+    margin: 0;
+    text-align: right;
+    width: 90%;
+  }
+  
+  .profile__input-error {
+    color: #ee3465;
+  }
+  
+  .profile__input:focus {
+    outline: none;
+    background-color: #2e2e2e;
+    box-sizing: border-box;
+  }
   
   .profile__button {
     font-style: normal;
