--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,118 +1,137 @@
 .profile {
+  box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 74px auto 70px;
-    max-width: 410px;
-    color: black;
-  }
-  
-  .profile__greeting {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
-    margin: 0 auto 123px;
-  }
-  
-  .profile__data-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    border-bottom: 1px solid #424242;
-    padding: 0 0 17px 0;
-  }
-  
-  .profile__data-container:last-of-type {
-    border: none;
-    padding: 17px 0 0 0;
-    margin-bottom: 220px;
-  }
-  
-  .profile__text {
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 13px;
     margin: 0;
+    padding: 0 70px;
+    width: 100%;
+}
+
+.form__heading-profile {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-align: center;
+  color: #000000;
+  margin: 74px auto 123px;
+  max-width: 204px;
+}
+
+.form__profile {
+  display: flex;
+  flex-direction: column;
+  width: min(407px, 100%);
+  min-height: 60px;
+  padding: 0;
+  margin: 120px auto 0;
+}
+
+.profile__field {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.profile__field:nth-of-type(2) {
+  padding-top: 16px;
+  border-top: 1px solid #e8e8e8;
+}
+
+.profile__text {
+  font: normal 400 11px/13px Inter, serif;
+  color: #000;
+  margin: 0;
+  padding: 0;
+}
+
+.profile__input {
+  border: none;
+  outline: none;
+  text-align: end;
+  width: 85%;
+}
+
+.profile__text_subtitle {
+  font-weight: 500;
+}
+
+.form__item-profile_error {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  color: #ff004c;
+}
+
+.form__profile_span {
+  margin-bottom: 10px;
+}
+
+.profile__button {
+  font: normal 400 13px/15px Inter, serif;
+  border: none;
+  background-color: transparent;
+  width: fit-content;
+  height: 16px;
+  margin: 220px auto 0;
+  padding: 0;
+  cursor: pointer;
+}
+
+.profile__button:disabled {
+  opacity: 0.7;
+  cursor: default !important;
+}
+
+.profile__button:not([disabled]):hover {
+  opacity: 0.7;
+  transition: opacity 0.15s ease-in;
+}
+
+.profile__button:active {
+  text-shadow: 1px -5px 12px #bbbbbb;
+}
+
+.profile__button_styled {
+  font: normal 500 13px/15px Inter, serif;
+  color: #ff3055;
+  margin: 16px auto 70px;
+}
+
+.profile__button_styled:active {
+  text-shadow: 1px -5px 12px #bbbbbb;
+  color: #ff3056d2;
+}
+
+@media screen and (max-width: 768px) {
+  .form__heading-profile {
+    margin: 236px auto 0;
   }
 
-  .profile__input {
-    color: white;
-    background-color: unset;
-    border: none;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 13px;
-    margin: 0;
-    text-align: right;
-    width: 90%;
+  .form__profile {
+    margin: 96px auto 0;
   }
-  
-  .profile__input-error {
-    color: #ee3465;
+}
+
+@media screen and (max-width: 480px) {
+  .profile {
+    padding: 0 30px;
   }
-  
-  .profile__input:focus {
-    outline: none;
-    background-color: #2e2e2e;
-    box-sizing: border-box;
+
+  .form__heading-profile {
+    margin: 70px auto 0;
   }
-  
+
+  .form__profile {
+    margin: 80px auto 0;
+  }
+
   .profile__button {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 16px;
-    border: none;
-    padding: 0;
-    margin: 0 0 16px 0;
-    background-color: unset;
-    transition: 0.2s;
+    margin: 380px auto 0;
   }
-  
-  .profile__button:hover {
-    opacity: 0.7;
-    cursor: pointer;
-  }
-  
-  .profile__button_type_signout {
-    color: #ee3465;
-    margin: 0;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .profile {
-      height: 100vh;
-      margin: auto;
-    }
-  }
-  
-  @media screen and (max-width: 450px) {
-    .profile {
-      height: 100vh;
-      margin: 70px 30px 0;
-      justify-content: flex-start;
-      position: relative;
-    }
-  
-    .profile__greeting {
-      margin-bottom: 80px;
-    }
-  
-    .profile__greeting {
-      font-size: 24px;
-      line-height: 29px;
-    }
-  
-    .profile__text {
-      font-size: 11px;
-      line-height: 13px;
-    }
-  
-    .profile__button {
-      font-size: 12px;
-      line-height: 15px;
-    }
-  }
+}
