--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -7,10 +7,11 @@
 }
 
 .card {
-  display: flex;
-  justify-content: space-between;
-  background: #f9f9f9;
-  margin-bottom: 40px;
+    background-color: #FDFDFD;
+    border-radius: 10px;
+    max-width: 100%;
+    max-height: 100%;
+    color: black;
 }
 
 .card:last-of-type {
@@ -18,9 +19,10 @@
 }
 
 .card__description {
-  margin: 22px auto 22px 22px;
-  padding: 0;
-  list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 14px 12px;
 }
 
 .card__description-container {
@@ -69,10 +71,9 @@
 }
 
 .card__img {
-  width: 220px;
-  height: 122px;
-  object-fit: cover;
-  margin: 6px 6px 6px auto;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 10px 10px 0 0;
 }
 
 .card__img:hover {
