--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -18,6 +18,7 @@
     letter-spacing: -0.04em;
     font-weight: normal;
     max-width: 730px;
+    color: white;
   }
   
   .navigation__nav-box {
