--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,136 +1,49 @@
-.movies-card {
-  background: #ffffff;
-  padding: 70px 70px 10px;
+.movie {
   display: flex;
   flex-direction: column;
-	flex: auto;
+  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
 }
 
-.card {
-    background-color: #FDFDFD;
-    border-radius: 10px;
-    max-width: 100%;
-    max-height: 100%;
-    color: black;
+.movie__image {
+  width: 100%;
+  max-height: 203px;
+  object-fit: cover;
+  cursor: pointer;
 }
 
-.card:last-of-type {
-  margin-bottom: 0;
-}
-
-.card__description {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 14px 12px;
-}
-
-.card__description-container {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.card__title {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  color: #000000;
-  margin-bottom: 13px;
-}
-
-.card__duration {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 11px;
-  line-height: 13px;
+.movie__info {
+  max-height: 68px;
+  height: 100%;
+  background-color: #fff;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  color: #a0a0a0;
-  margin-bottom: 30px;
+  padding: 14px;
+  box-sizing: border-box;
+  
 }
 
-.card__like {
-  background: url(../../images/svg/like.svg) no-repeat center;
-  width: 14px;
-  height: 12px;
+.movie__description {
+  text-align: left;
+  max-width: 85%;
 }
 
-.card__like:hover {
-  opacity: 0.8;
-  cursor: pointer;
+.movie__title {
+  margin: 0;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.21;
+  margin-bottom: 9px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.card__like_active {
-  background: url(../../images/svg/onLike.svg) no-repeat center;
-  width: 14px;
-  height: 12px;
-}
-
-.card__img {
-    width: 100%;
-    object-fit: contain;
-    border-radius: 10px 10px 0 0;
-}
-
-.card__img:hover {
-  opacity: 0.9;
-  cursor: pointer;
-}
-
-.card__delete {
-  background: url(../../images/svg/delete.svg) no-repeat center;
-  width: 14px;
-  height: 12px;
-}
-
-.card__delete:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-@media screen and (max-width: 768px) {
-  .movies-card {
-    padding: 60px 30px 30px;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  .movies-card {
-    padding: 40px 10px 20px;
-  }
-
-  .card {
-    flex-direction: column-reverse;
-    width: 300px;
-    margin: 0 auto 20px;
-  }
-
-  .card__description-container {
-    margin: 0;
-  }
-
-  .card__description {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 16px 0 12px;
-    max-width: 300px;
-  }
-
-  .card__title {
-    max-width: 250px;
-  }
-
-  .card__duration {
-    margin-bottom: 14px;
-  }
-
-  .card__img {
-    width: 300px;
-    height: 168px;
-    margin: 0 0 14px;
-  }
+.movie__duration {
+  margin: 0;
+  font-size: 11px;
+  font-weight: 400;
+  color: #A0A0A0;
+  line-height: 1.21;
 }
