--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,76 +1,41 @@
-.cards {
-    margin: 0 70px;
-    padding-bottom: 80px;
+.movie-list {
+  padding: 81px 0 30px;
+  border-top: 1px solid #E8E8E8;
+}
+
+.movie-list__container {
+  display: grid;
+  row-gap: 30px;
+  column-gap: 24px;
+  list-style: none; 
+  grid-template-columns: repeat(auto-fit, 364px);
+  margin: 0;
+  padding: 0;
+}
+
+.movie-list__not-found {
+  color: #EE3465;
+}
+
+@media screen and (max-width: 1023px) {
+
+  .movie-list__container {
+    grid-template-columns: repeat(auto-fit, 339px);
+    row-gap: 36px;
+    column-gap: 30px;
+  } 
+   
+}
+
+@media screen and (max-width: 425px) {
+
+  .movie-list {
+    padding-top: 50px;
   }
-  
-  .cards__list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    row-gap: 32px;
-    column-gap: 20px;
-    margin: 80px auto;
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .cards__button {
-    color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    width: 100%;
-    height: 36px;
-    background: #F9F9F9;
-    border-radius: 6px;
-    border: none;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 15px;
-    transition: 0.2s;
-  }
-  
-  .cards__button:hover {
-    cursor: pointer;
-    opacity: 0.7;
-  }
-  
-  @media screen and (max-width: 1000px) {
-    .cards__list {
-      grid-template-columns: repeat(3, 1fr);
-      row-gap: 30px;
-      column-gap: 36px;
-    }
-  }
-  
-  @media screen and (max-width: 800px) {
-    .cards__list {
-      grid-template-columns: repeat(3, 1fr);
-      row-gap: 30px;
-      column-gap: 36px;
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
-    .cards {
-      margin: 0 30px;
-    }
-  
-    .cards__list {
-      grid-template-columns: repeat(2, 1fr);
-      row-gap: 30px;
-      column-gap: 36px;
-    }
-  }
-  
-  @media screen and (max-width: 550px) {
-    .cards {
-      margin: 0 14px;
-    }
-  
-    .cards__list {
-      grid-template-columns: 1fr;
-      row-gap: 20px;
-      column-gap: 0;
-    }
-  }
+
+  .movie-list__container {
+    grid-template-columns: repeat(auto-fit, 300px);
+    row-gap: 16px;
+  } 
+
+}
