--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -17,6 +17,35 @@
   color: #EE3465;
 }
 
+.button_type_more {
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  text-align: center;
+  color: #000000;
+  width: 320px;
+  height: 36px;
+  padding: 0;
+  outline: none;
+  border: 1px solid #E8E8E8;
+    border-radius: 3px;
+    background: #ffffff;
+  transition: 0.1s linear 0.1s;
+}
+
+.button_type_more:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 450px) {
+  .button_type_more {
+    width: 240px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
 
   .movie-list__container {
