--- a/src/components/InfoTooltip/InfoTooltip.css
+++ b/src/components/InfoTooltip/InfoTooltip.css
@@ -53,6 +53,12 @@
   margin: 0 0 54px;
 }
 
+.button_type_close-popup {
+  background-image: url('../../images/svg/close_icon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 @media screen and (max-width: 1023px) {
 
   .popup__info-status {
