--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -18,21 +18,20 @@
 }
 
 .button_type_more {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  text-align: center;
-  color: #000000;
-  width: 320px;
-  height: 36px;
-  padding: 0;
-  outline: none;
-  border: 1px solid #E8E8E8;
-    border-radius: 3px;
-    background: #ffffff;
-  transition: 0.1s linear 0.1s;
+  color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+    height: 36px;
+    background: #F9F9F9;
+    border-radius: 6px;
+    border: none;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    transition: 0.2s;
 }
 
 .button_type_more:hover {
