--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,13 +1,20 @@
 .profile {
-  box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0 70px;
-    width: 100%;
+  padding: 0 0 70px;
+  width: calc(100% - 70px*2);
+  margin: 0 auto;
 }
 
-.form__heading-profile {
+.profile__info {
+  padding-top: 74px;
+  margin: 0 auto;
+  max-width: 410px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.profile__title {
   font-family: Inter;
   font-style: normal;
   font-weight: 500;
@@ -15,20 +22,11 @@
   line-height: 29px;
   text-align: center;
   color: #000000;
-  margin: 74px auto 123px;
+  margin: 0 auto 123px;
   max-width: 204px;
 }
 
-.form__profile {
-  display: flex;
-  flex-direction: column;
-  width: min(407px, 100%);
-  min-height: 60px;
-  padding: 0;
-  margin: 120px auto 0;
-}
-
-.profile__field {
+.profile__container-item {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -36,98 +34,127 @@
   margin-bottom: 16px;
 }
 
-.profile__field:nth-of-type(2) {
+.profile__container-item:nth-of-type(2) {
   padding-top: 16px;
   border-top: 1px solid #e8e8e8;
 }
 
-.profile__text {
-  font: normal 400 11px/13px Inter, serif;
-  color: #000;
-  margin: 0;
-  padding: 0;
+.profile__container {
+  min-height: 266px;
+  text-align: left;
 }
 
-.profile__input {
+.profile__signout-link {
+  font-size: 13px;
+  line-height: 1.21;
+  font-weight: 500;
+  text-decoration: none;
+  color: #EE3465;
+}
+
+.form__input_type_profile {
   border: none;
   outline: none;
   text-align: end;
   width: 85%;
 }
 
-.profile__text_subtitle {
-  font-weight: 500;
+.profile__lable {
+  color: #000;
+  font: normal 400 11px/13px Inter,serif;
+  margin: 0;
+  padding: 0;
 }
 
-.form__item-profile_error {
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 11px;
-  line-height: 13px;
-  color: #ff004c;
+.profile__input-error {
+  font-size: 10px;
+  line-height: 1.21;
+  font-weight: 400;
+  color: #EE3465;
+  height: 12px;
+  grid-row: 2;
+  grid-column: -1/2;
+  text-align: right;
 }
 
-.form__profile_span {
-  margin-bottom: 10px;
-}
-
-.profile__button {
+.button_type_edit {
   font: normal 400 13px/15px Inter, serif;
   border: none;
   background-color: transparent;
   width: fit-content;
   height: 16px;
-  margin: 220px auto 0;
+  margin: 0 auto;
   padding: 0;
   cursor: pointer;
 }
 
-.profile__button:disabled {
+.button_type_edit:disabled {
   opacity: 0.7;
   cursor: default !important;
 }
 
-.profile__button:not([disabled]):hover {
+.button_type_edit:not([disabled]):hover {
   opacity: 0.7;
   transition: opacity 0.15s ease-in;
 }
 
-.profile__button:active {
+.button_type_edit:active {
   text-shadow: 1px -5px 12px #bbbbbb;
 }
 
-.profile__button_styled {
+.profile__signout-link {
   font: normal 500 13px/15px Inter, serif;
   color: #ff3055;
   margin: 16px auto 70px;
 }
 
-.profile__button_styled:active {
+.profile__signout-link:active {
   text-shadow: 1px -5px 12px #bbbbbb;
   color: #ff3056d2;
 }
 
-@media screen and (max-width: 768px) {
-  .form__heading-profile {
-    margin: 236px auto 0;
+@media screen and (max-width: 1023px) {
+
+  .profile {
+    width: calc(100% - 30px*2);
   }
 
-  .form__profile {
-    margin: 96px auto 0;
+  .profile__info {
+    padding-top: 236px;
   }
+  
+  .profile__title {
+    margin-bottom: 96px;
+  }
+
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
+
   .profile {
-    padding: 0 30px;
+    padding-bottom: 50px;
   }
 
-  .form__heading-profile {
-    margin: 70px auto 0;
+  .profile__info {
+    padding-top: 150px;
   }
 
-  .form__profile {
-    margin: 80px auto 0;
+}
+
+@media screen and (max-width: 425px) {
+
+  .profile {
+    padding-bottom: 40px;
+    width: calc(100% - 30px*2);
+    margin: 0 auto;
   }
+
+  .profile__info {
+    padding-top: 50px;
+  }
+
+  .profile__title {
+    margin-bottom: 80px;
+  }
+
 }
