--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -1,14 +1,17 @@
 .movie {
+  border-radius: 6px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.08);
+  margin: 0;
+  padding: 0;
+  width: 350px;
 }
 
 .movie__image {
-  width: 100%;
-  max-height: 203px;
-  object-fit: cover;
   cursor: pointer;
+  position: relative;
+  height: 200px;
 }
 
 .movie__info {
@@ -46,4 +49,59 @@
   font-weight: 400;
   color: #A0A0A0;
   line-height: 1.21;
+}
+
+.movies-card-list__action {
+  width: 100%;
+  height: 166px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button_type_save {
+    border: none;
+    background-color: unset;
+    background-image: url("../../images/svg/like.svg");
+    background-position: center;
+    background-size: 100%;
+    width: 16px;
+    height: 16px;
+    transition: 0.2s;
+    outline: none;
+    padding: 0;
+    border-radius: 50%;
+}
+
+.button_type_save:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+}
+
+.button_type_save-active {
+  background-image: url("../../images/svg/onLike.svg");
+}
+
+.button_type_delete {
+  background-image: url("../../images/svg/delete.svg");
+}
+
+@media screen and (max-width: 1279px) {
+  .movie {
+    width: 340px;
+  }
+
+  .movie__image {
+    height: 190px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .movie {
+    width: 300px;
+  }
+
+  .movie__image {
+    height: 168px;
+  }
 }
