--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -55,9 +55,8 @@
   }
 
   .movie-list__container {
-    grid-template-columns: repeat(auto-fit, 339px);
-    row-gap: 36px;
-    column-gap: 30px;
+    gap: 47px 30px;
+    width: 710px;
   } 
    
 }
@@ -69,8 +68,7 @@
   }
 
   .movie-list__container {
-    grid-template-columns: repeat(auto-fit, 300px);
-    row-gap: 16px;
+    width: 300px;
   } 
 }
 
@@ -78,4 +76,8 @@
   .movie-list {
     margin: 30px 0 0;
   }
+
+  .movie-list__container {
+    gap: 39px 30px;
+  } 
 }
