--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,31 +3,28 @@
   padding: 70px 70px 29px;
 }
 
-.search-form__container {
+.search-form__form {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   align-items: center;
-  height: 34px;
-  padding-bottom: 15px;
+  justify-content: center;
   border-bottom: 1px solid #e8e8e8;
 }
 
-.search-form__search-icon:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
 .search-form__input {
+  width: 100%;
+  height: 48px;
   border: none;
-  padding: 0%;
-  outline: none;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 34px;
-  text-align: start;
+  margin: 0;
+  padding: 22px;
   color: #a0a0a0;
+  border-radius: 4px;
+  border: none;
+  font: normal 400 28px/34px Inter, serif;
+  box-sizing: border-box;
+  outline: none;
+  cursor: pointer;
 }
 
 .search-form__input:focus {
@@ -40,7 +37,6 @@
   width: 36px;
   height: 34px;
   border: none;
-  padding: 0;
   outline: none;
   transition: 0.1s linear 0.1s;
 }
