--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -5,24 +5,25 @@
 
   .movies__more {
     margin: 50px auto 80px;
-    display: block;
-    width: 320px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
     height: 36px;
-    background-color: #fff;
-    border:  1px solid #E8E8E8;
-    border-radius: 5px;
-    padding: 0;
-    font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
+    background: #F9F9F9;
+    border-radius: 6px;
+    border: none;
     font-weight: 500;
     font-size: 12px;
     line-height: 15px;
-    color: #000;
+    transition: 0.2s;
   }
   
   .movies__more:hover {
     cursor: pointer;
-    opacity: .5;
-    border: 1px solid #2BE080;
+    opacity: .7;
   }
   
   .movies__more_invisible {
