--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -3,12 +3,12 @@
     flex-direction: column;
   }
 
-  .movies__more {
-    margin: 50px auto 80px;
+  .movies__button {
     color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
     width: 100%;
     height: 36px;
     background: #F9F9F9;
@@ -18,13 +18,9 @@
     font-size: 12px;
     line-height: 15px;
     transition: 0.2s;
-  }
-  
-  .movies__more:hover {
+}
+
+.movies__button:hover {
+    opacity: 0.6;
     cursor: pointer;
-    opacity: .7;
-  }
-  
-  .movies__more_invisible {
-    display: none;
-  }
+}
