--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -18,9 +18,10 @@
 
 .movie-list__not-found {
   color: #EE3465;
+  margin: 0 auto;
 }
 
-.button_type_more {
+.card-list__more {
   color: black;
     display: flex;
     align-items: center;
@@ -37,13 +38,13 @@
     transition: 0.2s;
 }
 
-.button_type_more:hover {
+.card-list__more:hover {
   opacity: 0.8;
   cursor: pointer;
 }
 
 @media screen and (max-width: 450px) {
-  .button_type_more {
+  .card-list__more {
     width: 240px;
   }
 }
