--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,4 +1,27 @@
-.movies {
+  .movies {
     height: 100vh;
     flex-direction: column;
+  }
+  .movies__button {
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+    height: 36px;
+    background: #F9F9F9;
+    border-radius: 6px;
+    border: none;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    transition: 0.2s;
+  }
+  .movies__button_on {
+    display: block;
+  }
+  .movies__button:hover {
+      cursor: pointer;
+      opacity: 0.8;
   }
