--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -44,9 +44,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
     z-index: 10;
     padding: 20px;
+    flex: 1;
 }
 
 .preloader__container {
