--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -17,6 +17,43 @@
   padding: 0;
 }
 
+.movies-card-list__action {
+  width: 100%;
+  height: 166px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.button_type_more {
+  width: 320px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: normal 500 12px/15px Inter, serif;
+  color: #000;
+  background-color: #fff;
+  margin: 0 auto;
+  padding: 0;
+  border: 1px solid #e8e8e8;
+  border-radius: 3px;
+}
+
+.button_type_more:hover {
+  cursor: pointer;
+  border: 1px solid #bbbbbb;
+}
+
+.button_type_more:active {
+  background-color: #f5f5f5f5;
+  box-shadow: inset 0px 0px 5px #bbbbbb;
+}
+
+.button_type_more_disabled {
+  display: none;
+}
+
 @media screen and (max-width: 450px) {
   .card-list__more {
     width: 240px;
