--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -17,41 +17,24 @@
   padding: 0;
 }
 
-.movies-card-list__action {
-  width: 100%;
-  height: 166px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.button_type_more {
+.card-list__more {
   width: 320px;
   height: 36px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font: normal 500 12px/15px Inter, serif;
-  color: #000;
-  background-color: #fff;
-  margin: 0 auto;
-  padding: 0;
-  border: 1px solid #e8e8e8;
+  align-content: center;
   border-radius: 3px;
+  background-color: white;
+  color: black;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  border: 1px solid #e8e8e8;
+  margin: 50px auto 0;
+  transition: opacity 0.3s linear;
 }
 
-.button_type_more:hover {
+.card-list__more:hover {
   cursor: pointer;
-  border: 1px solid #bbbbbb;
-}
-
-.button_type_more:active {
-  background-color: #f5f5f5f5;
-  box-shadow: inset 0px 0px 5px #bbbbbb;
-}
-
-.button_type_more_disabled {
-  display: none;
+  opacity: 0.6;
 }
 
 @media screen and (max-width: 450px) {
