--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -18,18 +18,20 @@
 }
 
 .card-list__more {
-  width: 320px;
-  height: 36px;
-  align-content: center;
-  border-radius: 3px;
-  background-color: white;
-  color: black;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  border: 1px solid #e8e8e8;
-  margin: 50px auto 0;
-  transition: opacity 0.3s linear;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+    height: 36px;
+    background: #F9F9F9;
+    border-radius: 6px;
+    border: none;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    transition: 0.2s;
 }
 
 .card-list__more:hover {
